--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@fortawesome/free-regular-svg-icons": "*",
     "@fortawesome/free-solid-svg-icons": "*",
     "@fortawesome/vue-fontawesome": "*",
-    "@rails/webpacker": "3.5",
+    "@rails/webpacker": "https://github.com/rails/webpacker",
     "bootstrap": "*",
     "i18n-js": "*",
     "marked": "*",
@@ -63,60 +63,22 @@
     "sortablejs": "*",
     "turbolinks": "*",
     "vue": "*",
-    "vue-loader": "14.2.2",
+    "vue-loader": "*",
     "vue-template-compiler": "*",
     "vue-turbolinks": "*",
     "yarn": "*"
   },
   "devDependencies": {
+    "@babel/core": "*",
     "@vue/test-utils": "^1.0.0-beta.20",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "*",
     "cypress": "*",
     "jest": "*",
     "jest-canvas-mock": "*",
     "jest-serializer-vue": "*",
     "vue-jest": "*",
-    "webpack-dev-server": "2.11.2"
-  },
-  "jest": {
-    "verbose": true,
-    "roots": [
-      "spec/frontend/javascript",
-      "app/javascript/packs"
-    ],
-    "setupFiles": [
-      "jest-canvas-mock"
-    ],
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "vue"
-    ],
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "app/javascript/packs/components/**/*.{js,vue}",
-      "app/javascript/packs/functional/**/*.{js}",
-      "!**/node_modules/**"
-    ],
-    "coverageReporters": [
-      "lcovonly",
-      "html"
-    ],
-    "coverageDirectory": "coverage/frontend",
-    "transform": {
-      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest",
-      "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
-    },
-    "moduleDirectories": [
-      "node_modules",
-      "app/javascript"
-    ],
-    "moduleNameMapper": {
-      "^@/(.*)$": "<rootDir>/app/javascript/packs/$1"
-    },
-    "snapshotSerializers": [
-      "<rootDir>/node_modules/jest-serializer-vue"
-    ]
+    "webpack-dev-server": "*"
   },
   "scripts": {
     "test": "jest --watch",
