--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,9 +1,12 @@
-require: rubocop-rspec
+require:
+  - rubocop-performance
+  - rubocop-rspec
 
 AllCops:
-  TargetRubyVersion: 2.4
+  TargetRubyVersion: 2.6
   DisplayCopNames: true
   Exclude:
+    - 'bin/**/*'
     - 'db/schema.rb'
     - 'node_modules/**/*'
     - 'vendor/**/*'
@@ -16,6 +19,10 @@ Style/PercentLiteralDelimiters:
     default: ()
     '%i': '[]'
     '%w': '[]'
+
+Style/StringLiterals:
+  Exclude:
+    - 'config/**/*'
 
 Documentation:
   Enabled: false
@@ -30,6 +37,7 @@ Metrics/BlockLength:
 
 Metrics/LineLength:
   Exclude:
+    - 'config/**/*'
     - 'db/migrate/*'
     - 'spec/**/*'
 
@@ -46,3 +54,6 @@ RSpec/NestedGroups:
 Style/MixinUsage:
   Enabled: false
 
+Layout/SpaceInsideArrayLiteralBrackets:
+  Exclude:
+    - 'config/**/*'
