--- a/package.json
+++ b/package.json
@@ -55,8 +55,9 @@
     "@fortawesome/free-regular-svg-icons": "*",
     "@fortawesome/free-solid-svg-icons": "*",
     "@fortawesome/vue-fontawesome": "*",
-    "@rails/webpacker": "https://github.com/rails/webpacker",
+    "@rails/webpacker": "^4.0.2",
     "bootstrap": "*",
+    "core-js": "3",
     "i18n-js": "*",
     "marked": "*",
     "rails-ujs": "*",
@@ -70,14 +71,13 @@
   },
   "devDependencies": {
     "@babel/core": "*",
-    "@vue/test-utils": "^1.0.0-beta.20",
-    "babel-core": "^7.0.0-bridge.0",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "babel-jest": "*",
     "cypress": "*",
     "jest": "*",
     "jest-canvas-mock": "*",
     "jest-serializer-vue": "*",
-    "vue-jest": "*",
+    "vue-jest": "^4.0.0-beta.2",
     "webpack-dev-server": "*"
   },
   "scripts": {
